Updates for July 2022

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a:hover {
   border-radius: 31px;
 }
 
-a.active {
+.active {
   border:1px solid;
   border-color: var(--text);
   border-radius: 31px;
