--- a/css/style.css
+++ b/css/style.css
@@ -188,11 +188,6 @@ a:hover {
   font-display: swap;
 }
 
-@font-face {
-  font-family: "Symbola";
-  src: url("fonts/Symbola.ttf") format("truetype");
-}
-
 body {
   text-rendering: optimizeSpeed;
   min-height: 100vh;
@@ -217,7 +212,7 @@ a {
 
 .name {
   position: relative;
-  font-family: "CMRDD", "Symbola";
+  font-family: "CMRDD";
   font-size: 20px;
   font-weight: 600;
   text-align: left;
