--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ label {
 
 footer a, footer a:hover {
   background-color: transparent;
-  color: initial;
+  color: var(--text);
 }
 
 a:hover {
@@ -293,6 +293,11 @@ footer img {
 footer hr {
   max-width: 100%;
   height: 1px;
+}
+
+footer div a {
+  display: inline-block;
+  margin-top: 5px;
 }
 
 html {
