--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,8 @@ ul {
    font-size:16px;
    display: block;
    margin-top: 15px;
-   width: 100px;
+   width: 107px;
+   text-align: center;
 }
 
 hr {
