--- a/css/style.css
+++ b/css/style.css
@@ -165,15 +165,16 @@ a:hover {
 
 @font-face {
  font-family:'LeagueSpartanVariable';
- src:url(fonts/LeagueSpartan-VF.woff2) format("woff2-variations");
+ src:url(fonts/LeagueSpartan-VF.woff2) format("woff2-variations"),
+     url(fonts/LeagueSpartan-VF.woff) format("woff-variations");
  font-weight:200 900;
  font-display:swap;
 }
 
 @font-face {
   font-family: "CMRDD";
-  src: url("fonts/cmrdd-bold.woff2") format("woff2"),
-       url("fonts/cmrdd-bold.woff") format("woff");
+  src: url("fonts/CMRDD-Bold.woff2") format("woff2"),
+       url("fonts/CMRDD-Bold.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
