--- a/css/style.css
+++ b/css/style.css
@@ -1,397 +1,72 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
-html,
-body,
-div,
-header,
-nav,
-main,
-article,
-footer,
-input,
-svg,
-label {
-    max-width: none;
-}
-
-/* Themes */
-:root {
-  --text: #303030;
-  --background: #EBF0E4;
-  --accent: #c8ccc2;
-  --flexpos: left;
-}
-
-.home {
-  --text: #20130B;
-  --background: #ffb990;
-  --accent: #d49a78;
-}
-
-.gallery {
-  --text: #fff;
-  --background: #555;
-  --accent: #808080;
-}
-
-.knowledge {
-  --text: #212121;
-  --background: #d7cfb2;
-  --accent: #aba58e;
-}
-
-.projects {
-  --text: #1B1626;
-  --background: #cedfd9;
-  --accent: #9abdb0;
-}
-
-.journal {
-  --text: #303030;
-  --background: #c8ccc2;
-  --accent: #EBF0E4;
-}
-
-.about {
-  --text: #311414;
-  --background: #EFC7C2;
-  --accent: #c6a5a1;
-
-}
-
-.colours, footer a:hover {
-  background-color: var(--background);
-  color: var(--text);
-  background: var(--background) url(/img/assets/test.gif) repeat;
-}
-
-
-::selection {
-  background: orange;
-  color: white;
-}
-
-a:hover {
-  background-color: var(--text);
-  color:var(--background);
-  transition: all .25s, color .25s;
-}
-
-.round-button:hover{
-  border-color: var(--text)
-}
-
-.round-button{
-  border:1px solid;
-  border-color: var(--accent);
-  border-radius: 31px;
-  font-size: 16px;
-  margin-top: 0;
-}
-
-.active {
-  border-bottom:2px solid;
-  border-color: var(--accent);
-}
-
-.next {
-  margin-left: 15px;
-  border-right:5px solid;
-  border-color: var(--text);
-  background-color: var(--accent);
-}
-
-@font-face {
- font-family:'LeagueSpartanVariable';
- src:url(fonts/LeagueSpartan-VF.woff2) format("woff2-variations"),
-     url(fonts/LeagueSpartan-VF.woff) format("woff-variations");
- font-weight:200 900;
- font-display:swap;
-}
-
-@font-face {
-  font-family: "Barlow";
-  src: url("fonts/Barlow-Black.woff2") format("woff2"),
-       url("fonts/Barlow-Black.woff") format("woff");
-  font-weight: 500;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "LunchType";
-  src: url("fonts/lunchtype22-latin.woff2") format("woff2"),
-       url("fonts/lunchtype22-latin.woff") format("woff");
-  font-weight: 400;
-  font-display: swap;
-}
-
-body {
-  font-family: "LeagueSpartanVariable";
-  text-rendering: optimizeSpeed;
-  min-height: 100vh;
-  line-height: 1.45;
-  background-color: var(--background);
-  color: var(--text);
-}
-
-header {
-  padding: 4vw;
-}
-
-main {
-  margin: 45px;
-  margin: calc(17px + 1.2%);
-}
-
-a {
-  color: var(--text);
-  padding: 8px 10px 5px 10px;
-  margin: -5px -10px;
-  font-weight: 500;
-}
-
-.name {
-  font-family: "LunchType";
-  font-size: 24px;
-  font-weight: bold;
-  text-align: left;
-}
-
-
-* {
-  max-width: 55ch;
-}
-
-nav ul {
-display: inline-block;
-}
-
-nav li {
-display: inline-block;
-}
-
-nav a {
-  display: inline-block;
-  margin: -5px 5px 5px -10px;
-  font-size: 21px;
-  font-weight: 500;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.extra {
-  margin-bottom: 35px;
-}
-
-.extra li {
-  font-size: 20px;
-  margin-bottom: 5px;
-}
-
-.chroma {
-  margin:-20px 0 20px 0;
-}
-
-.see-more {
-  font-size:16px;
-  display: block;
-  margin-top: 15px;
-  width: 100px;
-  text-align: center;
-  padding: 8px 0 5px 0;
-}
-
-hr {
-  background: var(--accent);
-  margin-bottom: 20px;
-  border: 0;
-  height: 3px;
-}
-
-
-footer {
-  margin: 30px;
-}
-
-footer hr {
-  max-width: 100%;
-  height: 1px;
-}
-
-footer div a {
-  display: inline-block;
-  margin-top: 3px;
-  margin-right: 0px;
-}
-
-pre {
-background-color: var(--accent);
-padding: 10px;
-overflow-y: hidden;
-}
-
-h1 {
-  font-size: 3.3em;
-  font-size: calc(2.3em + 2.5vw);
-  font-family: Barlow;
-  font-weight: 500;
-}
-
-h2 {
-  font-size: 33px;
-}
-
-h3 {
-  margin-bottom: 5px;
-  font-size: 20px;
-}
-
-.main-box {
-  font-size: 20px;
-  max-width: 400px;
-  margin: 20px .75vw 20px .75vw;
-}
-
-.main-box ul{
-  margin-bottom: 15px;
-}
-
-.main-box hr{
-  width:80%;
-  height:2px;
-  margin-bottom:15px
-}
-
-.flex-box {
-  display:flex;
-  flex-flow: row wrap;
-  justify-content: var(--flexpos);
-}
-
-.columns-2 {
-  columns: 425px 2;
-}
-
-.list-box a {
-  display: block;
-}
-
-.list-box p {
-  font-family: LeagueSpartanVariable;
-  font-size: 20px;
-  font-weight: 400;
-}
-
-.list-box {
-  display: inline-block;
-}
-
-.icon {
-  width:320px;
-  border-radius:15px;
-}
-
-.contactlist {
-  padding-top: calc(4px + .5%);
-  padding-bottom: calc(8px + .5%);
-  font-size: 20px;
-}
-
-
-img {
-  max-width: 100%;
-}
-
-a {
-  font-weight: bold;
-  text-decoration: none;
-  font-family: "LunchType";
-}
-
-article p {
-  font-size: 20px;
-  margin-bottom: 5px;
-}
-
-p {
-  font-size: 20px;
-  margin-bottom: 35px;
-}
-
-p a {
-  text-decoration: underline wavy var(--accent);
-}
-
-.tags {
-  margin-left: -5px;
-}
-
-.tags li {
-  display: inline-block;
-}
-
-.tags a {
-  display: inline-block;
-  margin: 0 0 10px 5px;
-}
-
-.back {
-  margin-top: 60px; 
-}
-
-.prev {
-  border-left: 5px solid;
-  border-color: var(--accent);
-}
-
-figure { 
-  max-width: 720px;
-}
-
-figcaption {
-  color: var(--accent);
-  font-weight: 700;
-  font-size: 18px;
-}
-
-h2 hr, figure hr {
-  max-width: 30%;
-  height: 2px;
-}
-
-.guide {
-  list-style: none;
-  background-color: var(--accent);
-  padding-top: 8px;
-}
-
-.guide li {
-  margin-left: 10px;
-  margin-top: 6px;
-  margin-bottom: 14px;
-  font-family: "LunchType";
-}
-
-ol {
-  padding-left: 8px;
-  padding-bottom: 0.1px;
-  min-width: 250px;
-  max-width: 275px;
-}
+body,h1,h2,h3,h4,h5,h6,hr,p,figure,blockquote,dl,dd{margin:0;}
+html,body,div,header,nav,main,article,footer,input,svg,label{max-width:none;}
+:root{--text:#303030;--background:#EBF0E4;--accent:#c8ccc2;--flexpos:left;}
+.home{--text:#20130B;--background:#ffb990;--accent:#d49a78;}
+.gallery{--text:#fff;--background:#555;--accent:#808080;}
+.knowledge{--text:#212121;--background:#d7cfb2;--accent:#aba58e;}
+.projects{--text:#1B1626;--background:#cedfd9;--accent:#9abdb0;}
+.journal{--text:#303030;--background:#c8ccc2;--accent:#EBF0E4;}
+.about{--text:#311414;--background:#EFC7C2;--accent:#c6a5a1;}
+.colours{background-color:var(--background);
+color:var(--text);
+background:var(--background)url(/img/assets/header.gif)repeat;}
+footera:hover{background-color:var(--background);color:var(--text);}
+::selection{background:orange;color:white;}
+a:hover{background-color:var(--text);color:var(--background);transition:all .25s;}
+.round-button:hover{border-color:var(--text)}
+.round-button{border:1px solid;border-color:var(--accent);border-radius:31px;font-size:16px;margin-top:0;}
+.active{border-bottom:2px solid;border-color:var(--accent);}
+.next{margin-left:15px;border-right:5px solid;border-color:var(--text);background-color:var(--accent);}
+@font-face{font-family:'LeagueSpartanVariable';src:url(fonts/LeagueSpartan-VF.woff2)format("woff2-variations"),url(fonts/LeagueSpartan-VF.woff)format("woff-variations");font-weight:400;font-display:swap;}
+@font-face{font-family:"Barlow";src:url("fonts/Barlow-Black.woff2")format("woff2"),url("fonts/Barlow-Black.woff")format("woff");font-weight:500;font-display:swap;}
+@font-face{font-family:"LunchType";src:url("fonts/Lunchtype22.woff2")format("woff2"),url("fonts/Lunchtype22.woff")format("woff");font-weight:400;font-display:swap;}
+body{font-family:"LeagueSpartanVariable";text-rendering:optimizeSpeed;min-height:100vh;line-height:1.45;background-color:var(--background);color:var(--text);}
+header{padding:4vw;}
+main{margin:45px;margin:calc(17px + 1.2%);}
+a{color:var(--text);padding:8px 10px 5px 10px;margin:-5px -10px;font-weight:500;}
+.name{font-family:"LunchType";font-size:24px;font-weight:bold;text-align:left;}
+*{max-width:55ch;}
+nav ul{display:inline-block;}
+nav li{display:inline-block;}
+nav a{display:inline-block;margin:-5px 5px 5px -10px;font-size:21px;font-weight:500;}
+ul{list-style:none;padding:0;margin:0;}
+.extra{margin-bottom:35px;}
+.extra li{font-size:20px;margin-bottom:5px;}
+.chroma{margin:-20px 0 20px 0;}
+.see-more {font-size:16px;display:block;
+margin-top:15px;width:100px;text-align:center;padding:8px 0 5px 0;}
+hr{background:var(--accent);margin-bottom:20px;border:0;height:3px;}
+footer{margin:30px;}
+footer hr{max-width:100%;height:1px;}
+footer div a{display:inline-block;margin-top:3px;margin-right:0px;}
+pre{background-color:var(--accent);padding:10px;overflow-y:hidden;}
+h1{font-size:3.3em;font-size:calc(2.3em + 2.5vw);font-family:Barlow;font-weight:500;}
+h2{font-size:33px;}
+h3{margin-bottom:5px;font-size:20px;}
+.main-box{font-size:20px;max-width:400px;margin:20px .75vw 20px .75vw;}
+.main-box ul{margin-bottom:15px;}
+.main-box hr{width:80%;height:2px;margin-bottom:15px}
+.flex-box{display:flex;flex-flow: row wrap;justify-content:var(--flexpos);}
+.columns-2{columns:425px 2;}
+.list-box a{display:block;}
+.list-box p{font-family: LeagueSpartanVariable;font-size: 20px;font-weight: 400;}
+.list-box{display:inline-block;}
+.icon{width:320px;border-radius:15px;}
+.contactlist{padding-top:calc(4px + .5%);padding-bottom:calc(8px + .5%);font-size:20px;}
+img{max-width:100%;}
+a{font-weight:bold;text-decoration:none;font-family:"LunchType";}
+article p{font-size:20px;margin-bottom:5px;}
+p{font-size:20px;margin-bottom:35px;}
+p a{text-decoration:underline wavy var(--accent);}
+.tags{margin-left:-5px;}
+.tags li{display:inline-block;}
+.tags a {display:inline-block;margin:0 0 10px 5px;}
+.back{margin-top:60px;}
+.prev{border-left:5px solid;border-color:var(--accent);}
+figure{max-width:720px;}
+figcaption{color:var(--accent);font-weight:700;font-size:18px;}
+h2 hr,figure hr{max-width:30%;height:2px;}
+.guide{list-style:none;background-color:var(--accent);padding-top:8px;}
+.guide li{margin-left:10px;margin-top:6px;margin-bottom:14px;font-family:"LunchType";}
+ol{padding-left:8px;padding-bottom:0.1px;
+min-width:250px;max-width:275px;}
