--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ footer{margin:30px;}
 footer hr{max-width:100%;height:1px;}
 footer div a{display:inline-block;margin-top:3px;margin-right:0px;}
 pre{background-color:var(--accent);padding:10px;overflow-y:hidden;}
-h1{font-size:3.3em;font-size:calc(2.3em + 2.5vw);font-family:Barlow;font-weight:500;}
+h1{font-size:3.3em;font-size:calc(2.3em + 2vw);font-family:Barlow;font-weight:500;line-height:1.1em;max-width:1000px;}
 h2{font-size:33px;}
 h3{margin-bottom:5px;font-size:20px;}
 .main-box{font-size:20px;max-width:400px;margin:20px .75vw 20px .75vw;}
@@ -60,7 +60,7 @@ p{font-size:20px;margin-bottom:35px;}
 p a{text-decoration:underline wavy var(--accent);}
 .tags{margin-left:-5px;}
 .tags li{display:inline-block;}
-.tags a {display:inline-block;margin:0 0 10px 5px;}
+.tags a {display:inline-block;margin:5px 0 10px 5px;}
 .back{margin-top:60px;}
 .prev{border-left:5px solid;border-color:var(--accent);}
 figure{max-width:720px;}
@@ -70,3 +70,6 @@ h2 hr,figure hr{max-width:30%;height:2px;}
 .guide li{margin-left:10px;margin-top:6px;margin-bottom:14px;font-family:"LunchType";}
 ol{padding-left:8px;padding-bottom:0.1px;
 min-width:250px;max-width:275px;}
+.journalbox{display:inline-block;max-width:500px;}
+.journalbox a{display:block;font-size:24px;margin:0 -10px;}
+.journalbox p{font-family: LeagueSpartanVariable;font-size: 20px;font-weight: 400;}
