--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ ul{list-style:none;padding:0;margin:0;}
 .chroma{margin:-20px 0 20px 0;}
 .see-more {font-size:16px;display:block;
 margin-top:15px;width:100px;text-align:center;padding:8px 0 5px 0;}
-hr{background:var(--accent);margin-bottom:20px;border:0;height:3px;}
+hr{background:var(--accent);margin:5px 0 20px 0;border:0;height:3px;}
 footer{margin:30px;}
 footer hr{max-width:100%;height:1px;}
 footer div a{display:inline-block;margin-top:3px;margin-right:0px;}
@@ -43,7 +43,7 @@ pre{background-color:var(--accent);padding:10px;overflow-y:hidden;}
 h1{font-size:3.3em;font-size:calc(2.3em + 2vw);font-family:Barlow;font-weight:500;line-height:1.1em;max-width:1000px;}
 h2{font-size:33px;}
 h3{margin-bottom:5px;font-size:20px;}
-.main-box{font-size:20px;max-width:400px;margin:20px .75vw 20px .75vw;}
+.main-box{font-size:20px;max-width:320px;margin:20px 5vw 20px .75vw;}
 .main-box ul{margin-bottom:15px;}
 .main-box hr{width:80%;height:2px;margin-bottom:15px}
 .flex-box{display:flex;flex-flow: row wrap;justify-content:var(--flexpos);}
@@ -60,7 +60,7 @@ p{font-size:20px;margin-bottom:35px;}
 p a{text-decoration:underline wavy var(--accent);}
 .tags{margin-left:-5px;}
 .tags li{display:inline-block;}
-.tags a {display:inline-block;margin:5px 0 10px 5px;}
+.tags a {display:inline-block;margin:5px;}
 .back{margin-top:60px;}
 .prev{border-left:5px solid;border-color:var(--accent);}
 figure{max-width:720px;}
