--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ color:var(--text);
 background:var(--background)url(/img/assets/header.gif)repeat;}
 footer a:hover{background-color:var(--background);color:var(--text);}
 ::selection{background:orange;color:white;}
-a:hover{background-color:var(--text);color:var(--background);transition:all .25s;}
+a:hover{background-color:var(--text);color:var(--background);transition:all .25s;text-decoration-color:var(--background);}
 .round-button:hover{border-color:var(--text)}
 .round-button{border:1px solid;border-color:var(--accent);border-radius:31px;font-size:16px;margin-top:0;}
 .active{border-bottom:2px solid;border-color:var(--accent);}
@@ -63,7 +63,7 @@ img{max-width:100%;}
 a{font-weight:bold;text-decoration:none;font-family:"LunchType";}
 article p{font-size:20px;margin-bottom:5px;}
 p{font-size:20px;margin-bottom:35px;}
-p a, .link{text-decoration:underline wavy var(--accent);}
+p a, .link{text-decoration:underline 2px var(--text);padding:4px;margin:-5px;}
 .tags{margin:2px 0 0 -5px;}
 .tags li{display:inline-block;}
 .tags a {display:inline-block;margin:5px;}
