--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body,p,h1,h3,h4,h5,ul,.logo,.navbut,footer a,.clickbox p{margin:0}
+body,p,h1,h3,h4,h5,ul,.logo,.navbut,.footer a,.clickbox p{margin:0}
 body{background:#ddd;display:flex;flex-flow:column;min-height:100vh}
 *{color:#000;font-family:sans-serif;text-rendering:optimizeSpeed;text-decoration:none;transition:filter .75s}
 @font-face{font-family:LeagueSpartan;src:url(fonts/LeagueSpartan-Regular.woff2)format(woff2),url(fonts/LeagueSpartan-Regular.woff)format(woff);font-display:swap}
@@ -8,33 +8,33 @@ a{padding:7px 10px 4px;margin:-5px -9px -5px -10px}
 a:hover{background:#000;color:#fff;border-color:#777}
 .icon:hover{background:0;opacity:.6}
 .icon{padding:5px}
-footer{overflow:hidden;background:#ccc;margin-top:auto}
-footer hr{max-width:230px}
+.footer{overflow:hidden;background:#ccc;margin-top:auto}
+.footer hr{max-width:230px}
 li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
-footer a,header div,.navbut,.highlight,figure,main>img,header ul{display:inline-block}
+.footer a,.header div,.navbut,.highlight,figure,.main>img,.header ul{display:inline-block}
 li,h2,.title{width:fit-content}
 p,p a,q,li,em,.linklist{font-family:LeagueSpartan,sans-serif}
-header ul{padding:0 4px 0 10px;vertical-align:top}
+.header ul{padding:0 4px 0 10px;vertical-align:top}
 .menu{float:right;padding:5% 5% 5% 0;line-height:150%}
 .logo{padding:0;width:100%;height:auto}
 .logo:hover{filter:saturate(99)}
-header{max-width:780px}
+.header{max-width:780px}
 .layout{padding:26px;padding:min(5%,26px);max-width:720px}
 h1,h2,h3,h4,h5{font-family:Barlow,sans-serif}
 h1{font-size:3.3em;font-size:clamp(2.5em,10vw,3.3em);line-height:1.1em}
 h2{font-size:2.25em;margin:4px 0}
-main>h2{border-bottom:6px solid #bbb}
-main>h3{border-left:8px solid #bbb;padding-left:8px}
-main>h4{font-size:1.6rem;margin:0 0 8px}
-main>h4::before{content:"⚬";color:#888;}
+.main>h2{border-bottom:6px solid #bbb}
+.main>h3{border-left:8px solid #bbb;padding-left:8px}
+.main>h4{font-size:1.6rem;margin:0 0 8px}
+.main>h4::before{content:"⚬";color:#888;}
 h3{font-size:2rem;margin:0 0 8px}
 h4{font-size:1.85rem;margin:0 0 8px}
 h5{font-size:1.65rem;margin:16px 0}
 p{line-height:170%;margin:8px 0}
-main>p{text-indent:.5em}
+.main>p{text-indent:.5em}
 p a{text-decoration:underline;text-decoration-thickness:2px;padding:9px 5px 5px;margin:0 -5px}
-main>*,.title hr{margin:0 0 16px}
+.main>*,.title hr{margin:0 0 16px}
 .title{margin:2% 0 -16px 2%}
 .title hr{height:30px;background:#b3b3b3;position:relative;top:-20px;left:-16px;z-index:-1;width:50%;min-width:150px}
 .box{padding:16px 5%}
@@ -50,10 +50,10 @@ summary{cursor:pointer;padding:12px 0}
 .text{background:#c4c4c4;border-left:16px solid #b2b2b2}
 hr{background:#aaa;height:1px}
 hr,.borderless{border:0}
-main>hr{margin:42px 0;height:4px;background:#ccc}
+.main>hr{margin:42px 0;height:4px;background:#ccc}
 .info{border-left:50px solid #555;background:#666}
 figcaption{padding:10px 12px 9px;border-left:24px solid #bbb}
-q,cite,footer hr{margin:16px 0}
+q,cite,.footer hr{margin:16px 0}
 .box ul{margin:12px 0 8px;padding:0;line-height:160%}
 .navbut{border-style:solid;padding:7px 10px 5px;margin-top:22px;margin:22px 12px 0 0;}
 .prev{border-width:1px 1px 2px 10px;border-color:#bbb}
