--- a/css/style.css
+++ b/css/style.css
@@ -63,5 +63,6 @@ pre{padding:16px 2%;overflow:auto;background:#444;border-left:20px solid #333;fo
 .info,code{color:#fff}
 code{font-family:monospace}
 q{font-size:large}
-img,iframe{max-width:100%;height: auto}
+img,iframe{max-width:100%;width:100%;height:auto}
+picture img{width:auto}
 .highlight{margin:16px 0 16px -26px;border-radius:0 20px 20px 0}
