--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ p,p a,q,li,em,.linklist{font-family:LeagueSpartan,sans-serif}
 h1,h2,h3,h4,h5{font-family:Barlow,sans-serif}
 h1{font-size:3.3em;font-size:clamp(2.5em,10vw,3.3em);line-height:1.1em}
 h2{font-size:2.25em;margin:4px 0}
-.main>h2{border-bottom:6px solid #bbb}
+.main>h2{border-bottom:6px solid #bbb;display:inline-block}
 .main>h3{border-left:8px solid #bbb;padding-left:8px}
 .main>h4{font-size:1.6rem;margin:0 0 8px}
 .main>h4::before{content:"⚬";color:#888;}
