--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a:hover{background:#000;color:#fff;border-color:#777}
 .footer hr{max-width:230px}
 li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
-.footer a,.header div,.navbut,.highlight,figure,.main>img,.header ul{display:inline-block}
+.footer a,.header div,.navbut,.highlight,.main>img,figure,.header ul,.main>h2{display:inline-block}
 li,h2,.title{width:fit-content}
 p,p a,q,li,em,.linklist{font-family:LeagueSpartan,sans-serif}
 .header ul{padding:0 4px 0 10px;vertical-align:top}
@@ -24,7 +24,7 @@ p,p a,q,li,em,.linklist{font-family:LeagueSpartan,sans-serif}
 h1,h2,h3,h4,h5{font-family:Barlow,sans-serif}
 h1{font-size:3.3em;font-size:clamp(2.5em,10vw,3.3em);line-height:1.1em}
 h2{font-size:2.25em;margin:4px 0}
-.main>h2{border-bottom:6px solid #bbb;display:inline-block}
+.main>h2{border-bottom:6px solid #bbb}
 .main>h3{border-left:8px solid #bbb;padding-left:8px}
 .main>h4{font-size:1.6rem;margin:0 0 8px}
 .main>h4::before{content:"⚬ ";color:#888;}
@@ -34,6 +34,7 @@ h5{font-size:1.65rem;margin:16px 0}
 p{line-height:170%;margin:8px 0}
 .main>p{text-indent:.5em}
 p a{text-decoration:underline;text-decoration-thickness:2px;padding:9px 5px 5px;margin:0 -5px}
+.main>img{margin-right:720px}
 .main>*,.title hr{margin:0 0 16px}
 .title{margin:2% 0 -16px 2%}
 .title hr{height:30px;background:#b3b3b3;position:relative;top:-20px;left:-16px;z-index:-1;width:50%;min-width:150px}
@@ -63,6 +64,6 @@ pre{padding:16px 2%;overflow:auto;background:#444;border-left:20px solid #333;fo
 .info,code{color:#fff}
 code{font-family:monospace}
 q{font-size:large}
-img,iframe{max-width:100%;width:100%;height:auto}
+img,iframe{max-width:100%;height:auto}
 picture img{width:auto}
 .highlight{margin:16px 0 16px -26px;border-radius:0 20px 20px 0}
